@@ -47,13 +47,13 @@ cvs -d:pserver:anonymous&#64;boost.cvs.sourceforge.net:/cvsroot/boost login
 cvs -z3 -d:pserver:anonymous&#64;boost.cvs.sourceforge.net:/cvsroot/boost checkout boost
 cvs -d:pserver:anonymous&#64;boost.cvs.sourceforge.net:/cvsroot/boost logout
 
-cvs -d:pserver:anonym...&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent login
-cvs -z3 -d:pserver:anonym...&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent co -P libtorrent
-cvs -d:pserver:anonym...&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent logout
+cvs -d:pserver:anonymous&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent login
+cvs -z3 -d:pserver:anonymous&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent co -P libtorrent
+cvs -d:pserver:anonymous&#64;libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent logout
 
-cvs -d:pserver:anonym...&#64;asio.cvs.sourceforge.net:/cvsroot/asio login
-cvs -z3 -d:pserver:anonym...&#64;asio.cvs.sourceforge.net:/cvsroot/asio co -P asio
-cvs -d:pserver:anonym...&#64;asio.cvs.sourceforge.net:/cvsroot/asio login
+cvs -d:pserver:anonymous&#64;asio.cvs.sourceforge.net:/cvsroot/asio login
+cvs -z3 -d:pserver:anonymous&#64;asio.cvs.sourceforge.net:/cvsroot/asio co -P asio
+cvs -d:pserver:anonymous&#64;asio.cvs.sourceforge.net:/cvsroot/asio login
 </pre>
 </div>
 <div class="section" id="step-2-building-boost">
